--- a/compute-particles-cpp.qrc
+++ b/compute-particles-cpp.qrc
@@ -3,5 +3,6 @@
         <file>shader/particles.csh</file>
         <file>shader/particles.frag</file>
         <file>shader/particles.vert</file>
+        <file>src/main.qml</file>
     </qresource>
 </RCC>
