--- a/compute-particles-cpp.qrc
+++ b/compute-particles-cpp.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>shader/particles.csh</file>
+        <file>shader/particles.comp</file>
         <file>shader/particles.frag</file>
         <file>shader/particles.vert</file>
         <file>src/main.qml</file>
